<resources>
    <string name="app_name">Calculadora</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bc">C</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="bp">.</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b0">0</string>
    <string name="bsuma">+</string>
    <string name="bresta">-</string>
    <string name="bmult">*</string>
    <string name="bdiv">/</string>
    <string name="bres">=</string>
    <string name="vacio"></string>
    <string name="notif">Error al operar</string>
    <string name="guardar">Guardar</string>
    <string name="recuperar">Recuperar</string>
    <string name="mensjGuardar">Cifra guardada</string>
    <string name="errorGuardar">Se ha guardado 0 en memoria</string>
    <string name="errorRecup">No hay nada en memoria</string>
    <string name="errorComa">Ya hay coma decimal</string>
    <string name="bsin">sin</string>
    <string name="bcos">cos</string>
    <string name="braiz">raiz</string>

</resources>
